# clientats

./: .gitignore  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CODEBASE_REVIEW.md  CONTACTS_FEATURE.md  Dockerfile  JOB_SCRAPING_FEATURE.md  LLM_LIBRARY_RESEARCH.md  LLM_SETTINGS_UX_ANALYSIS.md  PHASE_1_COMPLETE.md  README.md  TAURI_QUICKSTART.md  TEST_FAILURES.md  TEST_RESULTS_PLATFORM_TAURI.md  debug_scraper.exs  docker-compose.prod.yml  docker-compose.yml  mix.exs  package-lock.json  package.json  test_scraping.exs
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.github/workflows/: ci.yml  deploy.yml  tauri-build.yml
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: API_MIGRATION_V1_TO_V2.md  API_VERSIONING.md  CI_CD_SETUP.md  DATABASE_POOLING.md  E2E_TESTING_GUIDE.md  LLM_ARCHITECTURE.md  TAURI.md  error_handling.md  gemini_setup.md
lib/: clientats.ex  clientats_web.ex
lib/clientats/: accounts.ex  application.ex  audit.ex  browser.ex  data_export.ex  database_health.ex  documents.ex  jobs.ex  (+7 more)
logs/: .gitignore
priv/: clientats_dev.db-shm  clientats_dev.db-wal
scripts/: README.md  build-prod.sh  capture_screenshot.js  db-export.sh  db.sh  export_postgres.exs  generate_pdf.js  migrate_db.sh  package-docker.sh  package-prod.sh  start-dev.sh  start-prod.sh  test.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
test/: migrations_test.exs  ollama_integration_test.exs  test_helper.exs
(+198 files in other folders)
