[package]
name = "clientats"
version = "1.0.0-alpha2"
description = "Job Scraping & Management Platform"
authors = ["ClientATS Team"]
license = "MIT"
repository = "https://github.com/clients-ats/clientats"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
port_check = "0.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
